made figures prettier and fixed all the apostrophes

--- a/paper/ieeeskel.tex
+++ b/paper/ieeeskel.tex
@@ -51,7 +51,7 @@
 %\usepackage {times}
 
  \newcommand{\xivpt}{\fontsize{15pt}{15pt}}% In order to use the figure-defining commands in ieeefig.sty...
-\usepackage{ieeefig}
+%\usepackage{ieeefig}
 
 \begin{document}
 
