--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -17,7 +17,7 @@ Taking into account the time, location, and shows that you watch with
 your friends, {\sys} makes smarter, situational suggestions.  In
 addition, {\sys} pulls from the Pandora tagging model to offer more
 specialized categories of shows, so that the user can choose what kind
-of show that they’re in the mood for.  Borrowing from internet radio’s
+of show that they're in the mood for.  Borrowing from internet radio’s
 “currently listening” queue model, {\sys} has a queue of the shows
 you’re currently watching, but allows the viewer to collect and keep
 track of shows they might want to watch in the future by storing them
