--- a/paper/relwk.tex
+++ b/paper/relwk.tex
@@ -1,7 +1,7 @@
 \section{Related Work}
 
 \subsection{Social Television}
-The current sphere of social television mostly exists online.  There’s
+The current sphere of social television mostly exists online.  There's
 buzz over social networks like twitter or facebook, blogposts, online
 communities, or even virtual watching rooms.  Nonetheless, all of
 these outlets emphasize the virtual presence of viewers.  None of
@@ -63,9 +63,9 @@ and see what they’re friends are watching and have watched, including
 GetGlue, IntoNow, ScreenTribe, TunerFish, and WatchPoints~\cite{chausse}.  
 However, most of these never involve real life user
 interaction.  IntoNow notifies your friend if you both are watching at
-the same time, but it’s retroactive socialization in that it notifies
-you after you’ve already made the conscious effort to already start
+the same time, but it's retroactive socialization in that it notifies
+you after you've already made the conscious effort to already start
 watching the show.  On the other hand, {\sys} pushes for proactive
-socialization in that you’re already hanging out with friends and want
+socialization in that you're already hanging out with friends and want
 to decide what to watch.  {\sys} encourages viewers to watch things
 with their friends in real life.
