--- a/paper/concl.tex
+++ b/paper/concl.tex
@@ -6,7 +6,7 @@ consistent with what users like.  Each of the factors we proposed must
 be given a certain weight in the recommendation algorithm, and by
 getting more user data, we can start to figure out what the
 appropriate weights should be.  We can also couple machine learning
-algorithms with user feedback to find patterns in user’s viewing
+algorithms with user feedback to find patterns in user's viewing
 habits.
 
 In addition, {\sys} currently exists as a stand alone website.  {\sys}
@@ -14,9 +14,9 @@ could also exist as an app for a set top box, such as AppleTV, Google
 TV, Boxee, or Roku.  Given a user interface makeover, {\sys} could
 also exist as a second screen experience.
 
-{\sys} could also benefit with tighter integration with Facebook’s
+{\sys} could also benefit with tighter integration with Facebook's
 social graph.  Like Hulu and Spotify, it could utilize the ticker, as
-well as look at user’s network and friends to make assumptions about
+well as look at user's network and friends to make assumptions about
 the viewer’s watching habits.
 
 In terms of content acquisition, the current television model must be
