--- a/paper/main.ltx
+++ b/paper/main.ltx
@@ -3,10 +3,9 @@
 
 \usepackage{times}
 \usepackage{url}
-\usepackage{subfig}
 \usepackage{ieeefig}
 \usepackage{graphicx}
-
+\usepackage[caption=false]{subfig}
 
 \renewcommand{\tt}[1]{\texttt{#1}}
 \newcommand{\xivpt}{\fontsize{15pt}{15pt}}
