--- a/paper/system.tex
+++ b/paper/system.tex
@@ -18,12 +18,12 @@ recommend a new show.  Users can override or remove any recommendation
 at any time.
 
 
-\begin{figure}
+\begin{figure} [hb]
 \centering
 \subfloat[Browse for shows and add them to your WatchBox] 
-{\label{fig:browse}\includegraphics[width=0.45\textwidth]{pics/browse.png}}
+{\label{fig:browse}\includegraphics[width=0.4\textwidth]{pics/browse.png}}
 
-\subfloat[Add shows from your WatchBox to your playlist] {\label{fig:watchbox}\includegraphics[width=0.45\textwidth]{pics/watchbox.png}}
+\subfloat[Add shows from your WatchBox to your playlist] {\label{fig:watchbox}\includegraphics[width=0.4\textwidth]{pics/watchbox.png}}
 \caption{Browsing and adding shows to your WatchBox}
 \label{fig:watchbox}
 \end{figure}
@@ -95,12 +95,6 @@ well as what mood you're in.
 \includegraphics[width=0.45\textwidth]{pics/mood.png}}
 \caption{Choosing a Mood}
 \label{fig:mood}
-\end{figure}
-
-\begin{figure} 
-\centering
- \includegraphics[width=0.45\textwidth]{pics/mood.png}
-\caption{Choosing a Mood}
 \end{figure}
 
 \subsection{Implementation}
