made a lot of edits to clean it up, added conclusion

--- a/paper/concl.tex
+++ b/paper/concl.tex
@@ -1,23 +1,23 @@
 \section{Future Work}
-Implementing a recommendation engine is not an easy task.  Future work
+Implementing a recommendation engine is not an easy task~\cite{netflix}.  Future work
 includes implementation of our situational recommendation engine, and
 tweaking the voting parameters such that the recommended programs are
 consistent with what users like.  Each of the factors we proposed must
 be given a certain weight in the recommendation algorithm, and by
-getting more user data, we can start to figure out what the
+getting more user data, we can begin to figure out what the
 appropriate weights should be.  We can also couple machine learning
-algorithms with user feedback to find patterns in user's viewing
+algorithms with user feedback to find patterns in users' viewing
 habits.
 
-In addition, {\sys} currently exists as a stand alone website.  {\sys}
+In addition, {\sys} currently exists as a stand alone web prototype.  {\sys}
 could also exist as an app for a set top box, such as AppleTV, Google
-TV, Boxee, or Roku.  Given a user interface makeover, {\sys} could
+TV, Boxee, or Roku.  With user interface modifications, {\sys} could
 also exist as a second screen experience.
 
 {\sys} could also benefit with tighter integration with Facebook's
 social graph.  Like Hulu and Spotify, it could utilize the ticker, as
-well as look at user's network and friends to make assumptions about
-the viewer’s watching habits.
+well as analyze user's network and friends to make assumptions about
+the viewer's watching habits.
 
 In terms of content acquisition, the current television model must be
 changed to allow for greater freedom from traditional cable
@@ -32,9 +32,15 @@ generate revenue.
 
 {\sys} is an application which helps users keep track of shows they
 want to watch, and uses individual user preferences and watching
-habits to help give tv show suggestions for groups.  {\sys} let's
+habits to help give tv show suggestions for groups.  {\sys} lets
 users search for shows based on recommendations from collaborative
 filtering and specified moods.  We have implemented {\sys} as a stand
 alone web prototype.
 
+With the distinction between the WatchBox and the queue, {\sys} offers a unique playlist experience, allowing users to tailor their watching preferences in the moment.  {\sys} also aims at providing a real life social experience around the television by recommending shows to a group of friends who have gathered to watch together.  The Pandora-style tagging of shows offers the user the chance to choose what they're in the mood to watch.  Finally, {\sys} makes these recommendations through our situational recommendation system, which uses not only traditional collaborative filtering methods, but also includes new factors, such as time, location, mood, and cross-media collaborative filtering.  Through this situational and tagging based recommendation system, {\sys} creates a personalized group watching experience, adding a new dimension to the sphere of social television.
+
 %% NEHA TODO
+
+\section{Acknowledgements}
+We would like to thank Henry Holtzman and Marie-Jose Montpetit, our instructors of MAS.571, Social TV, Spring 2012, MIT Media Lab, for their valuable comments and input on the project.
+
