--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -1,24 +1,19 @@
 \section{Introduction}
 
 {\sys} is a system designed to help users keep track of what
-television they want to watch, and in doing so assist in choosing what
+television they want to watch, and in doing so, assists in choosing what
 to watch when a group gathers together.
 
-A lot of viewer interaction is online, via twitter, facebook, blogs,
-or virtual viewing rooms.  However, the level and personal depth of
-this social interaction is often questionable.  {\sys} aims to
-increase viewers' real life social interaction by making viewing
-suggestions based on the group of people gathered together to
-watch. This system aims to reduce fights over the television remote,
-while using individual and group watching patterns to create more
-informative suggestions.
+Viewer interaction mainly takes place online, via twitter, facebook, blogs,
+or virtual viewing rooms.  However, because the interaction is online, the level and personal depth of
+this social interaction is often superficial.  {\sys} aims to increase viewers' real life social interaction by making viewing suggestions based on a group of people who have gathered to watch television together. This system aims to reduce fights over the television remote,while using individual and group watching patterns to create more informative suggestions.
 
-Taking into account the time, location, and shows that you watch with
-your friends, {\sys} makes smarter, situational suggestions.  In
+Taking into account the time, location, and shows that a viewer watches with
+his friends, {\sys} makes smarter, situational suggestions.  In
 addition, {\sys} pulls from the Pandora tagging model to offer more
 specialized categories of shows, so that the user can choose what kind
-of show that they're in the mood for.  Borrowing from internet radio’s
-“currently listening” queue model, {\sys} has a queue of the shows
-you’re currently watching, but allows the viewer to collect and keep
+of show that he's in the mood for.  Borrowing from internet radio's
+"currently listening" queue model, {\sys} has a queue of the shows
+the viewer is currently watching, but allows the viewer to collect and keep
 track of shows they might want to watch in the future by storing them
 in a special playlist known as a \emph{WatchBox}.  
