--- a/paper/local.bib
+++ b/paper/local.bib
@@ -11,6 +11,16 @@ title={JWPlayer},
 howpublished={\url{http://www.longtailvideo.com/}},
 }
 
+@misc{netflix,
+title={Netflix},
+howpublished={\url{http://www.netflixprize.com/}},
+}
+
+@misc{rotten,
+title={Rotten Tomatoes},
+howpublished={\url{http://www.rottentomatoes.com/}},
+}
+
 @misc{flask,
 title={Flask: A Python Microframework},
 howpublished={\url{http://flask.pocoo.org/}},
