--- a/paper/main.ltx
+++ b/paper/main.ltx
@@ -18,9 +18,13 @@
 
 \title{Tubely:  A Personalized Group Watching Experience}
 \author{
-  Jennifer Chan 
-  \and
-  Neha Narula
+   Jennifer Chan \\
+	MIT CSAIL \\
+	jpchan@mit.edu
+  \and ~~~~~~~~~~~~~~~~~~~~~ \and
+  Neha Narula \\
+	MIT CSAIL \\
+	narula@mit.edu
 }
 
 \maketitle
@@ -31,6 +35,7 @@
 \input{system}
 \input{recommendations}
 \input{concl}
+
 
 %\balance 
 
