--- a/paper/recommendations.tex
+++ b/paper/recommendations.tex
@@ -33,18 +33,18 @@ collaborative filtering.
 
 \subsection{Traditional Social Network Filtering}
 Following Pinterest and Spotify’s model of automatically opting in the
-user’s facebook profile, {\sys} will also grab viewer's facebook
+user's facebook profile, {\sys} will also grab viewer's facebook
 information in order to access your friends.  Since the emphasis of
 {\sys} is watching with friends, we must be able to have access to
 your friends in order to recommend the appropriate content.  Another
-benefit of using Facebook is that we can then leverage Facebook’s
-social graph to find the viewer’s closest friends, and weight the
+benefit of using Facebook is that we can then leverage Facebook's
+social graph to find the viewer's closest friends, and weight the
 collaborative filtering aspect of our algorithm appropriately.
 
 We could also link to viewer's other available social networks. After
-running some natural language processing algorithms on user’s blogs,
+running some natural language processing algorithms on user's blogs,
 tweets, and status updates, we can gain other valuable information on
-the user’s likes and dislikes.
+the user's likes and dislikes.
 
 \subsection{Cross-media collaborative filtering}
 In addition to the prior collaborative filtering methods, we can
