--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,3 +1,4 @@
+\begin{abstract}
 {\sys} presents a unique television watching experience revolving
 around real life social interaction, with recommendations based on
 these situational factors.  Inspired by models from movies and
@@ -7,3 +8,4 @@ more social, tailored recommendation system.  With your WatchBox,
 tv providers.  {\sys} also introduces the idea of situational
 recommendations, noting not only what viewers watch with their
 friends, but also the time and location of the watching.
+\end{abstract}
