--- a/paper/system.tex
+++ b/paper/system.tex
@@ -10,7 +10,7 @@ like watching at that moment, users will add shows from their WatchBox
 to their playlist.  Once they watch the show from their playlist, it
 is removed from their WatchBox.  The WatchBox playlist model means the
 user ultimately has the power in deciding what they watch in the
-moment.  They can remove things or add things from both their queue
+moment.  They can remove or add programs from both their queue
 and their watchbox.  If there are currently no shows in your playlist,
 then {\sys} will recommend shows, either pulling the shows currently
 in your WatchBox or using our situational recommendation system to
@@ -18,7 +18,7 @@ recommend a new show.  Users can override or remove any recommendation
 at any time.
 
 
-\begin{figure} [hb]
+\begin{figure}
 \centering
 \subfloat[Browse for shows and add them to your WatchBox] 
 {\label{fig:browse}\includegraphics[width=0.4\textwidth]{pics/browse.png}}
@@ -31,7 +31,7 @@ at any time.
 \subsection{Watch with friends}
 Most current social television apps want to help the user broadcast
 what they're watching and converse with others over chat about what
-they’re watching.  {\sys} aims to address watching in real time and
+they're watching.  {\sys} aims to address watching in real time and
 encourage real life interaction.  {\sys} mainly does this by making
 recommendations based on what friends you are hanging out with.
 Normally, whenever people watch television with friends, they end up
@@ -51,17 +51,15 @@ shows based on the union of the group's preferences.
 \end{figure}
 
 Through Facebook, {\sys} will scrape all of a user's friend list.  The
-user will choose the friends they are with as seen in Figure \ref{fig:choosefriends}, and then {\sys} will
-recommend three shows based on our situational recommendation model as seen in Figure \ref{fig:chooseshows}.
-The user can either choose one of the three shows to start watching,
+user will choose the friends they are with as seen in Figure \ref{fig:choosefriends}.  Then {\sys} will
+recommend three shows based on our situational recommendation model as seen in Figure \ref{fig:chooseshows}. The user can either choose one of the three shows to start watching,
 or press "Surprise me!", which will automatically dump one of the
 three shows into the currently streaming playlist.
 
 Although {\sys} aims primarily at bringing people together in real
 life, we understand that sometimes it is not always physically
 possible.  Thus, we also support watching with friends virtually.
-Similar to the current television viewing room model, users can join
-in on friends who are already watching a show.
+Similar to the current television viewing room model, users can join friends who are already watching a show.
 
 In general, {\sys} aims at bringing people together around the
 television.  Instead of focusing on broadcasting what the user is
@@ -70,23 +68,23 @@ people.
 
 \subsection{Mood}
 Drawing from Pandora's model, {\sys} allows the user to specify what
-they’re in the mood to watch.  Viewers will select a mood based on
+they're in the mood to watch.  Viewers will select a mood based on
 specialized categories that are found based on a detailed tagging
 system as seen in Figure \ref{fig:mood}.  There will be the typical genre selections, such as comedy,
-drama, and reality.  However, this tagging system enables more
+drama, and reality.  However, this tagging system also enables more
 specific categories.  For instance, the "girly" category may contain
 shows like Gossip Girl or The Hills.  The "trashy" category will have
 shows like Jersey Shore or the Real Houswives.
 
-A user may select multiple moods if they are watching alone, or if
+A user may select multiple moods if they are watching alone or if
 they are watching with friends.  If they are alone, they will be
 directed to the viewing area, and their playlist will be pre-populated
 with shows that reflect the moods they chose.  The playlist will first
 be populated with shows from your WatchBox that match the mood, and
 then subsequently with recommended shows based on our recommendation
 algorithm.  If the user is viewing with friends, we'll recommend three
-shows, taking into account both you and your friend's preferences, as
-well as what mood you're in.
+shows, taking into account both the viewer and his friends' preferences, as
+well as what mood they're in.
 
 \begin{figure}
 \centering
